[tool.poetry]
name = "dumpscan"
version = "0.1.1"
description = "Scanning memory dumps for secrets using volatility and yara"
authors = ["Leron Gray <daddycocoaman@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.6.1"
rich = "^12.5.1"
yara-python = "^4.2.0"
cryptography = "^37.0.4"
cffi = "^1.15.1"
construct = "^2.10.68"
pycryptodome = "^3.15.0"
jsonschema = "^4.7.2"
capstone = "^5.0.0rc2"
arrow = "^1.2.2"
pefile = "^2022.5.30"

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
black = "^22.3.0"
volatility3 = {git = "https://github.com/volatilityfoundation/volatility3", rev = "develop"}
minidump = "^0.0.21"
oscrypto = "^1.3.0"

[tool.poetry.scripts]
dumpscan = "dumpscan.main:app"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.1.0a6"]
build-backend = "poetry.core.masonry.api"
